--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@mui/x-date-pickers": "^7.12.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.12",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
